[package]
name = "riposte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
http-body-util = "0.1.0-rc.2"
anyhow = "1.0.70"
