[package]
name = "riposte"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "On-demand http status code response"
repository = "https://github.com/tomascarreira/risposte"
readme = "README.md"
keywords = ["http", "statuscode"]
categories = ["web-programming::http-server", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
http-body-util = "0.1.0-rc.2"
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
